--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,8 +7,8 @@ on:
 
 env:
   SUMMARY_TITLE: 'TeamOS - What Do You Do?'
-  ZULIP_STREAM: '_hack-fridays'
-  ZULIP_TOPIC: 'Team-OS What Do You Do? (Hack Friday)'
+  ZULIP_STREAM: 'loop/team-os'
+  ZULIP_TOPIC: 'TeamOS - WDYD?'
 
 jobs:
   create:
